Added User&Admin&Client Classes + application.properties config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8088
-spring.datasource.url=jdbc:mysql://localhost:3306/DMNStage
+spring.datasource.url=jdbc:mysql://localhost:3306/DMNStageAPI
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
