--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,15 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 #spring.thymeleaf.cache=false
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
 #spring.queries.users-query=select username, password, active from user where username=?
 #spring.queries.roles-query=select username, role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where username=?
+#server.context-path=/auth
+#security.basic.enable=false
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
+#security.oauth2.resource.filter-order=3
