changed url names of api + adjust localTime with spring boot 1.5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 server.port=8088
+
+#Hibernate
+#run only once then comment
+#spring.datasource.data=classpath*:data.sql
 spring.datasource.url=jdbc:mysql://localhost:3306/DMNStageAPI
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+#Jpa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-#spring.thymeleaf.cache=false
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
 #spring.queries.users-query=select username, password, active from user where username=?
-#spring.queries.roles-query=select username, role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where username=?
+#spring.queries.roles-query=select username, name from user u inner join user_role ur on(u.id=ur.user_id) inner join name r on(ur.role_id=r.id) where username=?
 #server.context-path=/auth
 #security.basic.enable=false
 #spring.datasource.testWhileIdle=true
