--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <version>20160810</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
     </dependencies>
 
     <!-- Oauth2  -->
