-Back to Spring 2.x.x -Added username to token additional info -Added token management -TokenStore Class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8088
+#server.contextPath=/api
 spring.datasource.url=jdbc:mysql://localhost:3306/DMNStageAPI
 spring.datasource.username=root
 spring.datasource.password=
@@ -8,6 +9,8 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#security.oauth2.resource.filter-order=3
+
 #spring.thymeleaf.cache=false
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
