--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,20 @@ server.port=8088
 spring.datasource.url=jdbc:mysql://localhost:3306/DMNStageAPI
 spring.datasource.username=root
 spring.datasource.password=
+# [GC GCSQL] Google Cloud SQL database Config
+#spring.datasource.url=jdbc:mysql://google/[DBNAME]?cloudSqlInstance=[CONNECTIONNAME]&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+#spring.datasource.username=[USER]
+#spring.datasource.password=[PASS]
+
+
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 #Jpa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# Google Cloud SQL doesn't support My ISAM ( GC GCSQL )
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 #spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
