--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <artifactId>DMNStageAPI</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <!-- [GC GAE] Local: jar GC: war -->
-    <!--<packaging>jar</packaging>-->
     <packaging>jar</packaging>
+    <!--<packaging>war</packaging>-->
 
     <name>DMNStage API</name>
     <description>DMNStage API Web Service</description>
@@ -16,8 +16,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
-        <!--<version>1.5.15.RELEASE</version>-->
+        <!--<version>2.0.4.RELEASE</version>-->
+        <version>1.5.15.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -40,38 +40,38 @@
             <artifactId>spring-boot-starter-web</artifactId>
 
             <!-- [GC GAE] Local: Comment this ▼ GC: Uncomment -->
-            <!--<exclusions>-->
-            <!--<exclusion>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
-            <!--</exclusion>-->
-            <!--</exclusions>-->
+            <!--<exclusions>
+            <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            </exclusion>
+            </exclusions>-->
             <!-- [GC GAE] Local: Comment this ▲ GC: Uncomment -->
 
         </dependency>
 
         <!-- [GC GAE] Local: Comment this ▼ GC: Uncomment -->
-        <!--<dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>javax.servlet</groupId>-->
+        <!--<artifactId>javax.servlet-api</artifactId>-->
+        <!--<version>3.1.0</version>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
-        &lt;!&ndash; Exclude any jul-to-slf4j &ndash;&gt;
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jul-to-slf4j</artifactId>
-            <scope>provided</scope>
-        </dependency>-->
+        <!--&lt;!&ndash; Exclude any jul-to-slf4j &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--<groupId>org.slf4j</groupId>-->
+        <!--<artifactId>jul-to-slf4j</artifactId>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
         <!-- [GC GAE] Local: Comment this ▲ GC: Uncomment -->
 
         <!-- GC GCSQL LocalDatabase: Comment this (if there is a conflict) ▼ Google cloud SQL: Uncomment -->
-        <dependency>
-            <groupId>com.google.cloud.sql</groupId>
-            <artifactId>mysql-socket-factory</artifactId>
-            <version>1.0.9</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.google.cloud.sql</groupId>-->
+        <!--<artifactId>mysql-socket-factory</artifactId>-->
+        <!--<version>1.0.9</version>-->
+        <!--</dependency>-->
 
 
         <dependency>
@@ -150,11 +150,11 @@
             </plugin>
 
             <!-- [GC GAE] Local: Comment this ▼ GC: Uncomment -->
-            <!--<plugin>-->
-            <!--<groupId>com.google.cloud.tools</groupId>-->
-            <!--<artifactId>appengine-maven-plugin</artifactId>-->
-            <!--<version>1.3.1</version>-->
-            <!--</plugin>-->
+            <!--<plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>appengine-maven-plugin</artifactId>
+            <version>1.3.1</version>
+            </plugin>-->
             <!-- [GC GAE] Local: Comment this ▲ GC: Uncomment -->
 
         </plugins>
