--- a/pom.xml
+++ b/pom.xml
@@ -51,27 +51,27 @@
         </dependency>
 
         <!-- [GC GAE] Local: Comment this ▼ GC: Uncomment -->
-        <!--<dependency>-->
-        <!--<groupId>javax.servlet</groupId>-->
-        <!--<artifactId>javax.servlet-api</artifactId>-->
-        <!--<version>3.1.0</version>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
+        <!--<dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+        <scope>provided</scope>
+        </dependency>
 
-        <!--&lt;!&ndash; Exclude any jul-to-slf4j &ndash;&gt;-->
-        <!--<dependency>-->
-        <!--<groupId>org.slf4j</groupId>-->
-        <!--<artifactId>jul-to-slf4j</artifactId>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
+        &lt;!&ndash; Exclude any jul-to-slf4j &ndash;&gt;
+        <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jul-to-slf4j</artifactId>
+        <scope>provided</scope>
+        </dependency>-->
         <!-- [GC GAE] Local: Comment this ▲ GC: Uncomment -->
 
         <!-- GC GCSQL LocalDatabase: Comment this (if there is a conflict) ▼ Google cloud SQL: Uncomment -->
-        <!--<dependency>-->
-        <!--<groupId>com.google.cloud.sql</groupId>-->
-        <!--<artifactId>mysql-socket-factory</artifactId>-->
-        <!--<version>1.0.9</version>-->
-        <!--</dependency>-->
+        <!--<dependency>
+        <groupId>com.google.cloud.sql</groupId>
+        <artifactId>mysql-socket-factory</artifactId>
+        <version>1.0.9</version>
+        </dependency>-->
 
 
         <dependency>
