--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.password=
 #spring.datasource.url=jdbc:mysql://google/[DBNAME]?cloudSqlInstance=[CONNECTIONNAME]&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 #spring.datasource.username=[USER]
 #spring.datasource.password=[PASS]
-
+#spring.datasource.url=jdbc:mysql://google/DMNStageAPI_DB?cloudSqlInstance=dmnstageapi:europe-west2:instance-01&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+#spring.datasource.username=root
+#spring.datasource.password=IsTmZkMZdrcwirPQIrWRle0L8GAtNarD
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
